kio_obexftp: Rewrite to better handle errors and disconnects

Correctly handle errors and attempt to reconnect when connection
fails by any means.
Also add icons for memory storage types (phone memory, memory card)
in root directory.

BUG: 321560